--- a/src/styles.css
+++ b/src/styles.css
@@ -213,3 +213,25 @@ body {
 .info-item b {
     font-weight: 600;
 }
+
+.load-more {
+    width:200px;
+    height:50px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    font-size:18px;
+    border-radius:5px;
+    border:none;
+    background-color: #005964;
+    color:white;
+    visibility: hidden;
+    margin-top:50px;
+    margin-bottom:50px;
+    cursor:pointer;
+}
+
+.button-wrapper {
+    display:flex;
+    justify-content: center;
+}
